--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
 
         <!-- load bootstrap and fontawesome via CDN -->
-        <link rel="stylesheet" href="scripts/bootstrap-3.2.0/docs/dist/css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="scripts/bootstrap-3.2.0/dist/css/bootstrap.min.css"/>
         <style>
             html, body
             {
@@ -15,7 +15,9 @@
         </style>
         
         <!-- load angular via CDN -->
-        <script src="scripts/angular-1.3.9/angular.min.js"></script>
+        <script src="scripts/angular-1.3.20/angular.js"></script>
+        <script src="scripts/angular-1.3.20/angular-messages.js"></script>
+        <script src="scripts/angular-1.3.20/angular-resource.js"></script>
         <script src="app.js"></script>
     </head>
     <body>
@@ -37,7 +39,13 @@
         <div class="container">
 
 			<div ng-controller="mainController">
-                <h>main container will be here</h>
+                <form name="myForm">
+                    <input type="text" ng-model="field" name="myField" required minlength="5" />
+                    <div ng-messages="myForm.myField.$error">
+                      <div class = "alert alert-warning" ng-message="required">You did not enter a field</div>
+                      <div class = "alert alert-warning" ng-message="minlength">The value entered is too short</div>
+                    </div>
+                 </form>
             </div>
 
 		</div>
